Fix photos AND Safari z-index rendering bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -123,7 +123,7 @@ figure #chart-title {
 }
 
 .fix-safari-z-index-rendering-issue {
-  position: relative;
+  will-change: opacity;
 }
 
 .step {
